--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     //友盟
     compile 'com.umeng.analytics:analytics:latest.integration'
     //gilide   图片加载器
-    compile group: 'com.github.bumptech.glide', name: 'glide', version: '3.7.0'
-
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    //recyclerview
+    compile 'com.android.support:recyclerview-v7:25.1.0'
 }
