--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,10 @@ dependencies {
     //recyclerview
     compile 'com.android.support:recyclerview-v7:25.1.0'
     //解析Json                fastjson
-    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.24'
+    compile 'com.alibaba:fastjson:1.2.24'
     //DiaogUtil
     compile 'com.github.hss01248:DialogUtil:1.0.7'
     //解析Json                gson
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile files('libs/BaiduLBS_Android.jar')
 }
